# tuesday

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  README.md  README.rst  coverage.xml  pyproject.toml
.github/: labels.yml
.github/workflows/: constraints.txt  deploy.yaml  tests.yaml
devel/: test_out_jordans_problem.ipynb
docs/: conf.py  contributing.md  environment.yaml  index.md  index.rst  requirements.txt  tutorials.md  tutorials.rst
docs/doctrees/: contributing.doctree  faqs.doctree  index.doctree  readme.doctree  tutorials.doctree
docs/doctrees/reference/: index.doctree  tuesday.doctree
docs/doctrees/reference/_autosummary/: tuesday.core.postprocessing.doctree  tuesday.core.summaries.doctree
docs/reference/: index.md  index.rst  py21cmfast-tools.rst  tuesday.md  tuesday.rst
docs/reference/_autosummary/: tuesday.core.postprocessing.rst  tuesday.core.summaries.rst
docs/templates/: class.md  module.md
docs/tutorials/: computing_and_plotting_power_spectra.ipynb  getting_started.ipynb  lc_noise_example.ipynb  match_lc_noise_power_to_sense.ipynb  targed_power_spectrum_normalization.ipynb
src/py21cmfast_tools/: __init__.py  lc2ps.py
src/tuesday/: __init__.py
src/tuesday/core/: __init__.py  lc2ps.py  psclasses.py  units.py
src/tuesday/core/instrument_models/: __init__.py  noise.py  test_noise.ipynb  test_noise_newtools.ipynb
src/tuesday/core/plotting/: __init__.py  box.py  powerspectra.py  sliceplots.py
src/tuesday/core/summaries/: __init__.py  powerspectra.py  psclasses.py
src/tuesday/simulators/py21cmfast/: lightcones.py
src/tuesday_eor/core/: __init__.py
tests/: test_dataclasses.py  test_lc_noise.py  test_plotting.py  test_plotting_boxes.py  test_plotting_ps.py  test_ps.py
tests/test_simulators/test_py21cmfast/: test_lightcones.py
